# simple-notary

./: CLAUDE.md  Cargo.toml
.claude/: CLAUDE.md
.claude/docs/: axum-websocket-shim.md  notarization-flow.md  notarization-strategies.md  session-io-reclamation.md  tlsn-releases.md
crates/axum-websocket/: Cargo.toml
crates/axum-websocket/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  lib.rs  main.rs
crates/notary/: Cargo.toml
crates/notary/src/: error.rs  lib.rs  main.rs  notarize.rs  server.rs  yoinker.rs
crates/notary/src/encoding/: abi.rs  eip712.rs  embedding.rs  json.rs  mod.rs
crates/notary/src/server/: axum_websocket.rs  protocol_upgrade.rs
crates/notary/src/signing/: ethereum_secp256k1.rs  exchange.rs  mod.rs  protocol.rs  rsa.rs  secp256k1.rs  signer.rs  subset.rs
crates/notary/tests/: notarize.rs  server.rs  signing.rs
