[package]
name = "axum-websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-core = { version = "0.5" }
async-tungstenite = { version = "0.28", features = ["tokio-native-tls"] }
base64 = { version = "0.21" }
futures-util = { version = "0.3" }
http = { version = "1.1" }
hyper = { version = "1.1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
sha1 = { version = "0.10" }
tracing = { version = "0.1" }
tokio = { version = "1.38", features = ["rt-multi-thread", "net", "io-util", "time", "macros", "fs"] }

[dev-dependencies]
http-body-util = { version = "0.1" }
tower-util = { version = "0.3.1" }