[package]
name = "simple-notary"
version = "0.1.0"
edition = "2024"
default-run = "notary"

[[bin]]
name = "notary"
path = "src/main.rs"

[dependencies]
axum-websocket = { workspace = true }

anyhow = { workspace = true }

http-transcript-context = { workspace = true }
tlsn = { workspace = true }
tokio = { workspace = true }

clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

async-tungstenite = { version = "0.28", features = ["tokio-native-tls"] }
ws_stream_tungstenite = { version = "0.14", features = ["tokio_io"] }

axum = { version = "0.8", features = ["ws"] }
axum-core = { version = "0.5" }

eyre = { version = "0.6" }
thiserror = { version = "1.0" }

futures = { version = "0.3" }

[dev-dependencies]
tlsn-server-fixture = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.14" }
tlsn-server-fixture-certs = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.14" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util"] }
tokio-util = { workspace = true, features = ["compat"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"